k8s/hotel-v1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel
  labels:
    run: hotel
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      run: hotel
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: hotel
    spec:
      containers:
      - image: beetravels/hotel-v1:node-v1.0.0
        imagePullPolicy: Always
        name: hotel
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
