k8s/destination-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: destination
  labels:
    run: destination
spec:
  selector:
    run: destination
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 9001
