k8s/flights-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flights
  labels:
    run: flights
spec:
  selector:
    run: flights
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 9103
