k8s/hotel-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hotel
  labels:
    run: hotel
spec:
  selector:
    run: hotel
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 9101
