k8s/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bee-ui
  labels:
    run: bee-ui
spec:
  selector:
    run: bee-ui
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 9000
