k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bee-travels-ingress-demo
spec:
  tls:
    - hosts: 
        - bee-travels-demo.mofi-ingress-442dbba0442be6c8c50f31ed96b00601-0000.us-east.containers.appdomain.cloud
      secretName: mofi-ingress-442dbba0442be6c8c50f31ed96b00601-0000
  rules:
    - host: bee-travels-demo.mofi-ingress-442dbba0442be6c8c50f31ed96b00601-0000.us-east.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bee-ui
                port:
                  number: 80
